# jaymap

./: .pylint  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: issue_template.md
.github/workflows/: build.yml
jaymap/: __init__.py  api.py  client.py  json.py  types.py
jaymap/tests/: __init__.py  __main__.py  smoke.py  types.py
jaymap/tests/types/: base.py  core.py
jaymap/types/: base.py  core.py  mail.py
