[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "jaymap"
author = "Amethyst Reese"
author-email = "amy@noswap.com"
description-file = "README.md"
home-page = "https://github.com/amyreese/jaymap"
requires = [
    "aiohttp",
    "stringcase",
    "typing_inspect",
]
requires-python = ">=3.7"
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "jaymap"
package = "jaymap"
version_file = true

[tool.coverage.run]
branch = true
include = ["jaymap/*"]
omit = ["jaymap/tests/*"]

[tool.coverage.report]
fail_under = 70
precision = 1
show_missing = true
skip_covered = true
